# dokurag

./: .gitignore  QUALITY.md  README.md  VERSIONS.md  docker-compose.yml  main.py  pyproject.toml
core/: chain.py
core/integrations/: openai.py  openrouter.py
db/: db.py  hybrid.py
tests/: openai_test.py  openrouter_test.py  test_chain.py  weviate_test.py
